--- a/src/ui/admin/admin_activity_overview_ui.fxml
+++ b/src/ui/admin/admin_activity_overview_ui.fxml
@@ -9,8 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.admin.AdminActivityOverviewUi">
+<AnchorPane minHeight="600.0" minWidth="880.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.admin.AdminActivityOverviewUi">
    <children>
       <JFXTextField focusColor="RED" layoutX="524.0" layoutY="18.0" prefHeight="37.0" prefWidth="260.0" promptText="Search employee" unFocusColor="BLACK" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="18.0">
          <font>
